test/files/pos/t6485a/Test_2.scala
import scala.language.experimental.macros

final class Ops[T](val x: T) extends AnyVal {
  def f: Unit = macro Macros.crash
}
