test/files/neg/macro-invalidusage-presuper/Macros_Test_2.scala
import scala.language.experimental.macros

class D extends { def x = macro impl } with AnyRef